--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,27 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+/* IDEAS
+Main button/link colour
+#d8a200
+#ecd100
+
+
+Light Hover colour
+#ffc200
+#ffe200
+
+
+Dark Hover colour (footer)
+#b58700
+#d8bf00
+
+*/
+
+
+
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #555555;
@@ -15,11 +36,11 @@ body {
 
 a {
   text-decoration: none;
-  color: #7cc576;
+  color: #d8a200;
 }
 
 a:hover {
-  color: #9ed49a;
+  color: #ffc200;
   text-decoration: none;
 }
 
@@ -37,7 +58,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #7cc576;
+  background: #d8a200;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -51,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:hover {
-  background: #97d193;
+  background: #ffc200;
   color: #fff;
 }
 
@@ -121,7 +142,7 @@ h1, h2, h3, h4, h5, h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
+* Desktop Navigation
 */
 .navbar {
   padding: 0;
@@ -158,7 +179,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar a:hover, .navbar .active, .navbar li:hover > a {
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .navbar .dropdown ul {
@@ -192,7 +213,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .navbar .dropdown:hover > ul {
@@ -224,7 +245,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /**
-* Mobile Navigation 
+* Mobile Navigation
 */
 .mobile-nav-toggle {
   color: #151515;
@@ -286,7 +307,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .navbar-mobile .getstarted {
@@ -318,7 +339,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -380,13 +401,13 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 3px;
   margin: 10px;
   color: #fff;
-  background: #7cc576;
+  background: #d8a200;
 }
 
 #hero .btn-get-started:hover {
   transition: 0.5s;
   background: #fff;
-  color: #7cc576;
+  color: #d8a200;
 }
 
 @media (min-width: 1024px) {
@@ -463,7 +484,7 @@ section {
 .about .content ul i {
   font-size: 24px;
   padding: 2px 6px 0 0;
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .about .content p:last-child {
@@ -482,7 +503,7 @@ section {
 .services .icon-box i {
   font-size: 48px;
   float: left;
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .services .icon-box p {
@@ -524,7 +545,7 @@ section {
 }
 
 .featured .nav-link:hover h4 {
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .featured .nav-link p {
@@ -537,7 +558,7 @@ section {
 }
 
 .featured .nav-link.active h4 {
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .featured .tab-pane.active {
@@ -631,7 +652,7 @@ section {
 }
 
 .why-us .accordion-list span {
-  color: #7cc576;
+  color: #d8a200;
   font-weight: 600;
   font-size: 18px;
   padding-right: 10px;
@@ -658,7 +679,7 @@ section {
 }
 
 .why-us .accordion-list a.collapsed:hover {
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .why-us .accordion-list a.collapsed .icon-show {
@@ -672,7 +693,7 @@ section {
 .why-us .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#7cc576 50%, rgba(124, 197, 118, 0.4) 52%);
+  background: radial-gradient(#d8a200 50%, rgba(216, 162, 0, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -713,14 +734,14 @@ section {
   animation-timing-function: steps;
   opacity: 1;
   border-radius: 50%;
-  border: 5px solid rgba(124, 197, 118, 0.7);
+  border: 5px solid rgba(216, 162, 0, 0.7);
   top: -15%;
   left: -15%;
   background: rgba(198, 16, 0, 0);
 }
 
 .why-us .play-btn:hover::after {
-  border-left: 15px solid #7cc576;
+  border-left: 15px solid #d8a200;
   transform: scale(20);
 }
 
@@ -810,7 +831,7 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  background: #7cc576;
+  background: #d8a200;
   color: #fff;
 }
 
@@ -911,7 +932,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -957,11 +978,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #7cc576;
+  border: 1px solid #d8a200;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #7cc576;
+  background-color: #d8a200;
 }
 
 .portfolio-details .portfolio-info {
@@ -1028,11 +1049,11 @@ section {
 }
 
 .testimonials .quote-icon i {
-  color: #7cc576;
+  color: #d8a200;
   font-size: 24px;
   padding: 18px;
   border-radius: 50px;
-  border: 2px solid #7cc576;
+  border: 2px solid #d8a200;
 }
 
 .testimonials .testimonial-item {
@@ -1079,7 +1100,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #7cc576;
+  background-color: #d8a200;
 }
 
 @media (min-width: 992px) {
@@ -1149,7 +1170,7 @@ section {
   height: 40px;
   opacity: 0;
   transition: bottom ease-in-out 0.4s;
-  background: rgba(124, 197, 118, 0.8);
+  background: rgba(216, 162, 0, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1189,7 +1210,7 @@ section {
   text-transform: uppercase;
   font-weight: 400;
   margin-bottom: 15px;
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .team .member .member-info p {
@@ -1261,7 +1282,7 @@ section {
 }
 
 .pricing .box ul i {
-  color: #7cc576;
+  color: #d8a200;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1280,8 +1301,8 @@ section {
   display: inline-block;
   padding: 10px 40px 12px 40px;
   border-radius: 5px;
-  border: 2px solid #7cc576;
-  color: #7cc576;
+  border: 2px solid #d8a200;
+  color: #d8a200;
   font-size: 14px;
   font-weight: 400;
   font-family: "Montserrat", sans-serif;
@@ -1290,22 +1311,22 @@ section {
 }
 
 .pricing .box .btn-buy:hover {
-  background: #7cc576;
+  background: #d8a200;
   color: #fff;
 }
 
 .pricing .recommended {
-  border-color: #7cc576;
+  border-color: #d8a200;
 }
 
 .pricing .recommended .btn-buy {
-  background: #7cc576;
+  background: #d8a200;
   color: #fff;
 }
 
 .pricing .recommended .btn-buy:hover {
-  background: #61b959;
-  border-color: #61b959;
+  background: #ffc200;
+  border-color: #ffc200;
 }
 
 .pricing .recommended-badge {
@@ -1316,8 +1337,8 @@ section {
   z-index: 1;
   font-size: 12px;
   padding: 4px 25px 6px 25px;
-  background: #eaf6e9;
-  color: #7cc576;
+  background: #f5eed9;
+  color: #d8a200;
   border-radius: 50px;
   text-transform: uppercase;
   font-weight: 600;
@@ -1340,7 +1361,7 @@ section {
 .faq .faq-list a {
   display: block;
   position: relative;
-  font-family: #7cc576;
+  font-family: #d8a200;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1369,7 +1390,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #7cc576;
+  color: #d8a200;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1393,11 +1414,11 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #7cc576;
+  color: #d8a200;
   float: left;
   width: 44px;
   height: 44px;
-  background: #eaf6e9;
+  background: #f5eed9;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1425,88 +1446,10 @@ section {
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #7cc576;
-  color: #fff;
-}
-
-.contact .php-email-form {
-  width: 100%;
-  background: #fff;
-  padding: 20px;
-  border-radius: 5px;
-}
-
-.contact .php-email-form .form-group {
-  padding-bottom: 8px;
-}
-
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .error-message br + br {
-  margin-top: 25px;
-}
-
-.contact .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  -webkit-animation: animate-loading 1s linear infinite;
-  animation: animate-loading 1s linear infinite;
-}
-
-.contact .php-email-form input, .contact .php-email-form textarea {
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 14px;
-}
-
-.contact .php-email-form input {
-  height: 44px;
-}
-
-.contact .php-email-form textarea {
-  padding: 10px 12px;
-}
-
-.contact .php-email-form button[type="submit"] {
-  background: #7cc576;
-  border: 0;
-  padding: 10px 24px;
+  background: #d8a200;
   color: #fff;
   transition: 0.4s;
   border-radius: 4px;
-}
-
-.contact .php-email-form button[type="submit"]:hover {
-  background: #61b959;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1650,7 +1593,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #7cc576;
+  background: #d8a200;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1658,7 +1601,7 @@ section {
 }
 
 #footer .footer-top .footer-newsletter form input[type="submit"]:hover {
-  background: #5ab652;
+  background: #b58700;
 }
 
 #footer .footer-top .social-links {
@@ -1668,7 +1611,7 @@ section {
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #7cc576;
+  background: #d8a200;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1681,7 +1624,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #5ab652;
+  background: #b58700;
   color: #fff;
   text-decoration: none;
 }
