Basic site structure

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
 #header .logo img {
   padding: 0;
   margin: 0;
-  max-height: 40px;
+  max-height: 60px;
 }
 
 @media (max-width: 992px) {
@@ -492,27 +492,27 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Services
+# Benefits
 --------------------------------------------------------------*/
-.services .icon-box h4 {
+.benefits .icon-box h4 {
   font-size: 20px;
   font-weight: 700;
   margin: 5px 0 10px 60px;
 }
 
-.services .icon-box i {
+.benefits .icon-box i {
   font-size: 48px;
   float: left;
   color: #d8a200;
 }
 
-.services .icon-box p {
+.benefits .icon-box p {
   font-size: 15px;
   color: #959595;
   margin-left: 60px;
 }
 
-.services .image {
+.benefits .image {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -520,48 +520,48 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Featured
+# Facilities
 --------------------------------------------------------------*/
-.featured {
+.facilities {
   padding: 40px 0 0 0;
   background: white;
 }
 
-.featured .nav-tabs {
+.facilities .nav-tabs {
   border: 0;
 }
 
-.featured .nav-link {
+.facilities .nav-link {
   border: 0;
   padding: 20px;
   color: #151515;
   transition: 0.3s;
 }
 
-.featured .nav-link h4 {
+.facilities .nav-link h4 {
   font-size: 18px;
   font-weight: 600;
   transition: 0.3s;
 }
 
-.featured .nav-link:hover h4 {
+.facilities .nav-link:hover h4 {
   color: #d8a200;
 }
 
-.featured .nav-link p {
+.facilities .nav-link p {
   font-size: 14px;
   margin-bottom: 0;
 }
 
-.featured .nav-link.active {
+.facilities .nav-link.active {
   box-shadow: 0px 0 25px rgba(0, 0, 0, 0.08);
 }
 
-.featured .nav-link.active h4 {
+.facilities .nav-link.active h4 {
   color: #d8a200;
 }
 
-.featured .tab-pane.active {
+.facilities .tab-pane.active {
   -webkit-animation: slide-down 0.5s ease-out;
   animation: slide-down 0.5s ease-out;
 }
@@ -585,34 +585,35 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Why Us
+# Classes
 --------------------------------------------------------------*/
-.why-us {
+
+.classes {
   background: whitesmoke;
   padding: 0;
 }
 
-.why-us .content {
+.classes .content {
   padding: 60px 100px 0 100px;
 }
 
-.why-us .content h3 {
+.classes .content h3 {
   font-weight: 400;
   font-size: 34px;
 }
 
-.why-us .content h4 {
+.classes .content h4 {
   font-size: 20px;
   font-weight: 700;
   margin-top: 5px;
 }
 
-.why-us .content p {
+.classes .content p {
   font-size: 15px;
   color: #959595;
 }
 
-.why-us .video-box {
+.classes .video-box {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -620,26 +621,26 @@ section {
   position: relative;
 }
 
-.why-us .accordion-list {
+.classes .accordion-list {
   padding: 0 100px 60px 100px;
 }
 
-.why-us .accordion-list ul {
+.classes .accordion-list ul {
   padding: 0;
   list-style: none;
 }
 
-.why-us .accordion-list li + li {
+.classes .accordion-list li + li {
   margin-top: 15px;
 }
 
-.why-us .accordion-list li {
+.classes .accordion-list li {
   padding: 20px;
   background: #fff;
   border-radius: 4px;
 }
 
-.why-us .accordion-list a {
+.classes .accordion-list a {
   display: block;
   position: relative;
   font-family: "Poppins", sans-serif;
@@ -651,46 +652,46 @@ section {
   cursor: pointer;
 }
 
-.why-us .accordion-list span {
+.classes .accordion-list span {
   color: #d8a200;
   font-weight: 600;
   font-size: 18px;
   padding-right: 10px;
 }
 
-.why-us .accordion-list i {
+.classes .accordion-list i {
   font-size: 24px;
   position: absolute;
   right: 0;
   top: 0;
 }
 
-.why-us .accordion-list p {
+.classes .accordion-list p {
   margin-bottom: 0;
   padding: 10px 0 0 0;
 }
 
-.why-us .accordion-list .icon-show {
+.classes .accordion-list .icon-show {
   display: none;
 }
 
-.why-us .accordion-list a.collapsed {
+.classes .accordion-list a.collapsed {
   color: #343a40;
 }
 
-.why-us .accordion-list a.collapsed:hover {
+.classes .accordion-list a.collapsed:hover {
   color: #d8a200;
 }
 
-.why-us .accordion-list a.collapsed .icon-show {
+.classes .accordion-list a.collapsed .icon-show {
   display: inline-block;
 }
 
-.why-us .accordion-list a.collapsed .icon-close {
+.classes .accordion-list a.collapsed .icon-close {
   display: none;
 }
 
-.why-us .play-btn {
+.classes .play-btn {
   width: 94px;
   height: 94px;
   background: radial-gradient(#d8a200 50%, rgba(216, 162, 0, 0.4) 52%);
@@ -702,7 +703,7 @@ section {
   overflow: hidden;
 }
 
-.why-us .play-btn::after {
+.classes .play-btn::after {
   content: '';
   position: absolute;
   left: 50%;
@@ -717,7 +718,7 @@ section {
   transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 
-.why-us .play-btn::before {
+.classes .play-btn::before {
   content: '';
   position: absolute;
   width: 120px;
@@ -740,12 +741,12 @@ section {
   background: rgba(198, 16, 0, 0);
 }
 
-.why-us .play-btn:hover::after {
+.classes .play-btn:hover::after {
   border-left: 15px solid #d8a200;
   transform: scale(20);
 }
 
-.why-us .play-btn:hover::before {
+.classes .play-btn:hover::before {
   content: '';
   position: absolute;
   left: 50%;
@@ -764,17 +765,17 @@ section {
 }
 
 @media (max-width: 1024px) {
-  .why-us .content, .why-us .accordion-list {
+  .classes .content, .classes .accordion-list {
     padding-left: 0;
     padding-right: 0;
   }
 }
 
 @media (max-width: 992px) {
-  .why-us .content {
+  .classes .content {
     padding-top: 30px;
   }
-  .why-us .accordion-list {
+  .classes .accordion-list {
     padding-bottom: 30px;
   }
 }
@@ -1518,7 +1519,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../assets/img/footer-bg.jpg") center center no-repeat;
+  background: #000000 url("../images/backgrounds/footer-bg.jpg") no-repeat center center;
   color: #fff;
   font-size: 14px;
   position: relative;
@@ -1531,7 +1532,7 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.85);
+  background: rgba(0, 0, 0, 0.70);
   z-index: 1;
 }
 
@@ -1543,7 +1544,7 @@ section {
 }
 
 #footer .footer-top .footer-logo img {
-  height: 80px;
+  height: 130px;
 }
 
 #footer .footer-top h3 {
@@ -1557,51 +1558,10 @@ section {
 }
 
 #footer .footer-top p {
-  font-size: 15;
+  font-size: 15px;
   font-style: italic;
   margin: 30px 0 0 0;
   padding: 0;
-}
-
-#footer .footer-top .footer-newsletter {
-  text-align: center;
-  font-size: 15px;
-  margin-top: 30px;
-}
-
-#footer .footer-top .footer-newsletter form {
-  background: #fff;
-  padding: 6px 10px;
-  position: relative;
-  border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  text-align: left;
-}
-
-#footer .footer-top .footer-newsletter form input[type="email"] {
-  border: 0;
-  padding: 4px 8px;
-  width: calc(100% - 100px);
-}
-
-#footer .footer-top .footer-newsletter form input[type="submit"] {
-  position: absolute;
-  top: 0;
-  right: -1px;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 20px;
-  background: #d8a200;
-  color: #fff;
-  transition: 0.3s;
-  border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
-
-#footer .footer-top .footer-newsletter form input[type="submit"]:hover {
-  background: #b58700;
 }
 
 #footer .footer-top .social-links {
@@ -1630,7 +1590,6 @@ section {
 }
 
 #footer .footer-bottom {
-  border-top: 1px solid #222222;
   z-index: 2;
   position: relative;
   padding-top: 40px;
