--- a/css/style.css
+++ b/css/style.css
@@ -9,26 +9,6 @@
 # General
 --------------------------------------------------------------*/
 
-/* IDEAS
-Main button/link colour
-#d8a200
-#ecd100
-
-
-Light Hover colour
-#ffc200
-#ffe200
-
-
-Dark Hover colour (footer)
-#b58700
-#d8bf00
-
-*/
-
-
-
-
 body {
   font-family: "Open Sans", sans-serif;
   color: #555555;
@@ -97,7 +77,6 @@ h1, h2, h3, h4, h5, h6 {
   height: 90px;
   transition: all 0.5s;
   z-index: 997;
-  transition: all 0.5s;
   background: #fff;
   box-shadow: 0 4px 10px -3px rgba(191, 191, 191, 0.5);
 }
@@ -193,7 +172,7 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 0;
   visibility: hidden;
   background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  box-shadow: 0 0 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
 }
 
@@ -323,7 +302,7 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
   visibility: visible;
   background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  box-shadow: 0 0 30px rgba(127, 137, 161, 0.25);
 }
 
 .navbar-mobile .dropdown ul li {
@@ -462,7 +441,7 @@ section {
 --------------------------------------------------------------*/
 .about .image {
   padding: 20px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 .about .content h3 {
@@ -494,6 +473,11 @@ section {
 /*--------------------------------------------------------------
 # Benefits
 --------------------------------------------------------------*/
+.benefits {
+  padding: 40px 0 0 0;
+  background: whitesmoke;
+}
+
 .benefits .icon-box h4 {
   font-size: 20px;
   font-weight: 700;
@@ -513,7 +497,7 @@ section {
 }
 
 .benefits .image {
-  background-position: center center;
+  background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 400px;
@@ -554,7 +538,7 @@ section {
 }
 
 .facilities .nav-link.active {
-  box-shadow: 0px 0 25px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
 }
 
 .facilities .nav-link.active h4 {
@@ -585,451 +569,25 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Classes
+# Find Us
 --------------------------------------------------------------*/
 
-.classes {
-  background: whitesmoke;
-  padding: 0;
-}
-
-.classes .content {
-  padding: 60px 100px 0 100px;
-}
-
-.classes .content h3 {
-  font-weight: 400;
-  font-size: 34px;
-}
-
-.classes .content h4 {
-  font-size: 20px;
-  font-weight: 700;
-  margin-top: 5px;
-}
-
-.classes .content p {
-  font-size: 15px;
-  color: #959595;
-}
-
-.classes .video-box {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  min-height: 400px;
-  position: relative;
-}
-
-.classes .accordion-list {
-  padding: 0 100px 60px 100px;
-}
-
-.classes .accordion-list ul {
-  padding: 0;
-  list-style: none;
-}
-
-.classes .accordion-list li + li {
-  margin-top: 15px;
-}
-
-.classes .accordion-list li {
-  padding: 20px;
-  background: #fff;
-  border-radius: 4px;
-}
-
-.classes .accordion-list a {
-  display: block;
-  position: relative;
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 500;
-  padding-right: 30px;
-  outline: none;
-  cursor: pointer;
-}
-
-.classes .accordion-list span {
-  color: #d8a200;
-  font-weight: 600;
-  font-size: 18px;
-  padding-right: 10px;
-}
-
-.classes .accordion-list i {
-  font-size: 24px;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.classes .accordion-list p {
-  margin-bottom: 0;
-  padding: 10px 0 0 0;
-}
-
-.classes .accordion-list .icon-show {
-  display: none;
-}
-
-.classes .accordion-list a.collapsed {
-  color: #343a40;
-}
-
-.classes .accordion-list a.collapsed:hover {
-  color: #d8a200;
-}
-
-.classes .accordion-list a.collapsed .icon-show {
-  display: inline-block;
-}
-
-.classes .accordion-list a.collapsed .icon-close {
-  display: none;
-}
-
-.classes .play-btn {
-  width: 94px;
-  height: 94px;
-  background: radial-gradient(#d8a200 50%, rgba(216, 162, 0, 0.4) 52%);
-  border-radius: 50%;
-  display: block;
-  position: absolute;
-  left: calc(50% - 47px);
-  top: calc(50% - 47px);
-  overflow: hidden;
-}
-
-.classes .play-btn::after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-40%) translateY(-50%);
-  width: 0;
-  height: 0;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-left: 15px solid #fff;
-  z-index: 100;
-  transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-.classes .play-btn::before {
-  content: '';
-  position: absolute;
-  width: 120px;
-  height: 120px;
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s;
-  -webkit-animation: pulsate-btn 2s;
-  animation: pulsate-btn 2s;
-  -webkit-animation-direction: forwards;
-  animation-direction: forwards;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-timing-function: steps;
-  animation-timing-function: steps;
-  opacity: 1;
-  border-radius: 50%;
-  border: 5px solid rgba(216, 162, 0, 0.7);
-  top: -15%;
-  left: -15%;
-  background: rgba(198, 16, 0, 0);
-}
-
-.classes .play-btn:hover::after {
-  border-left: 15px solid #d8a200;
-  transform: scale(20);
-}
-
-.classes .play-btn:hover::before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-40%) translateY(-50%);
-  width: 0;
-  height: 0;
-  border: none;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-left: 15px solid #fff;
-  z-index: 200;
-  -webkit-animation: none;
-  animation: none;
-  border-radius: 0;
-}
-
-@media (max-width: 1024px) {
-  .classes .content, .classes .accordion-list {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-
-@media (max-width: 992px) {
-  .classes .content {
-    padding-top: 30px;
-  }
-  .classes .accordion-list {
-    padding-bottom: 30px;
-  }
-}
-
-@-webkit-keyframes pulsate-btn {
-  0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1, 1);
-    opacity: 0;
-  }
-}
-
-@keyframes pulsate-btn {
-  0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1, 1);
-    opacity: 0;
-  }
-}
-
-/*--------------------------------------------------------------
-# Portfolio
---------------------------------------------------------------*/
-.portfolio .portfolio-item {
-  margin-bottom: 30px;
-}
-
-.portfolio #portfolio-flters {
-  padding: 0;
-  margin: 0 auto 25px auto;
-  list-style: none;
+.findus h3 {
   text-align: center;
 }
 
-.portfolio #portfolio-flters li {
-  cursor: pointer;
-  display: inline-block;
-  padding: 10px 18px 12px 18px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1;
-  text-transform: uppercase;
-  color: #555555;
-  transition: all 0.3s ease-in-out;
-  margin: 0 4px 10px 4px;
-  background: whitesmoke;
-  border-radius: 4px;
+.findus .map {
+  height: 100%;
+  min-height: 500px;
 }
 
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  background: #d8a200;
-  color: #fff;
-}
-
-.portfolio #portfolio-flters li:last-child {
-  margin-right: 0;
-}
-
-.portfolio .portfolio-wrap {
-  transition: 0.3s;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  background: rgba(0, 0, 0, 0.6);
-}
-
-.portfolio .portfolio-wrap::before {
-  content: "";
-  background: rgba(21, 21, 21, 0.6);
-  position: absolute;
-  left: 30px;
-  right: 30px;
-  top: 30px;
-  bottom: 30px;
-  transition: all ease-in-out 0.3s;
-  z-index: 2;
-  opacity: 0;
-}
-
-.portfolio .portfolio-wrap .portfolio-info {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
-  z-index: 3;
-  transition: all ease-in-out 0.3s;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.portfolio .portfolio-wrap .portfolio-info::before {
-  display: block;
-  content: "";
-  width: 48px;
-  height: 48px;
-  position: absolute;
-  top: 35px;
-  left: 35px;
-  border-top: 3px solid #fff;
-  border-left: 3px solid #fff;
-  transition: all 0.5s ease 0s;
-  z-index: 9994;
-}
-
-.portfolio .portfolio-wrap .portfolio-info::after {
-  display: block;
-  content: "";
-  width: 48px;
-  height: 48px;
-  position: absolute;
-  bottom: 35px;
-  right: 35px;
-  border-bottom: 3px solid #fff;
-  border-right: 3px solid #fff;
-  transition: all 0.5s ease 0s;
-  z-index: 9994;
-}
-
-.portfolio .portfolio-wrap .portfolio-info h4 {
-  font-size: 20px;
-  color: #fff;
-  font-weight: 600;
-}
-
-.portfolio .portfolio-wrap .portfolio-info p {
-  color: #ffffff;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 0;
-  margin: 0;
-}
-
-.portfolio .portfolio-wrap .portfolio-links {
-  text-align: center;
-  z-index: 4;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a {
-  color: #fff;
-  margin: 0 2px;
-  font-size: 28px;
-  display: inline-block;
-  transition: 0.3s;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #d8a200;
-}
-
-.portfolio .portfolio-wrap:hover::before {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 1;
-}
-
-.portfolio .portfolio-wrap:hover .portfolio-info {
-  opacity: 1;
-}
-
-.portfolio .portfolio-wrap:hover .portfolio-info::before {
-  top: 15px;
-  left: 15px;
-}
-
-.portfolio .portfolio-wrap:hover .portfolio-info::after {
-  bottom: 15px;
-  right: 15px;
-}
-
-/*--------------------------------------------------------------
-# Portfolio Details
---------------------------------------------------------------*/
-.portfolio-details {
-  padding-top: 40px;
-}
-
-.portfolio-details .portfolio-details-slider img {
-  width: 100%;
-}
-
-.portfolio-details .portfolio-details-slider .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
-
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: #fff;
-  opacity: 1;
-  border: 1px solid #d8a200;
-}
-
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #d8a200;
-}
-
-.portfolio-details .portfolio-info {
-  padding: 30px;
-  box-shadow: 0px 0 30px rgba(21, 21, 21, 0.08);
-}
-
-.portfolio-details .portfolio-info h3 {
-  font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #eee;
-}
-
-.portfolio-details .portfolio-info ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
-}
-
-.portfolio-details .portfolio-info ul li + li {
-  margin-top: 10px;
-}
-
-.portfolio-details .portfolio-description {
-  padding-top: 30px;
-}
-
-.portfolio-details .portfolio-description h2 {
-  font-size: 26px;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-
-.portfolio-details .portfolio-description p {
-  padding: 0;
-}
 
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
 .testimonials {
   padding: 60px 0;
-  background: url("../assets/img/testimonials-bg.jpg") no-repeat;
-  background-position: center center;
+  background: url("../stock-assets/images/background/large/calm-gi-dark-background.jpg") no-repeat center center;
   background-size: cover;
   position: relative;
 }
@@ -1041,7 +599,7 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.6);
 }
 
 .testimonials .quote-icon {
@@ -1111,59 +669,25 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Clients
+# Instructors
 --------------------------------------------------------------*/
-.clients {
+.instructors {
   background: whitesmoke;
-  padding: 15px 0;
-  text-align: center;
-}
-
-.clients img {
-  width: 50%;
-  filter: grayscale(100);
-  transition: all 0.4s ease-in-out;
-  display: inline-block;
-  padding: 15px 0;
-}
-
-.clients img:hover {
-  filter: none;
-  transform: scale(1.2);
-}
-
-@media (max-width: 768px) {
-  .clients img {
-    width: 40%;
-  }
-}
-
-@media (max-width: 575px) {
-  .clients img {
-    width: 50%;
-  }
-}
-
-/*--------------------------------------------------------------
-# Team
---------------------------------------------------------------*/
-.team {
-  background: #fff;
   padding: 60px 0;
 }
 
-.team .member {
+.instructors .member {
   margin-bottom: 20px;
   overflow: hidden;
 }
 
-.team .member .member-img {
+.instructors .member .member-img {
   position: relative;
   overflow: hidden;
   border-radius: 5px;
 }
 
-.team .member .social {
+.instructors .member .social {
   position: absolute;
   left: 0;
   bottom: -40px;
@@ -1177,7 +701,7 @@ section {
   justify-content: center;
 }
 
-.team .member .social a {
+.instructors .member .social a {
   transition: color 0.3s;
   color: rgba(255, 255, 255, 0.7);
   margin: 0 10px;
@@ -1186,26 +710,26 @@ section {
   justify-content: center;
 }
 
-.team .member .social a i {
+.instructors .member .social a i {
   line-height: 0;
 }
 
-.team .member .social a:hover {
+.instructors .member .social a:hover {
   color: #fff;
 }
 
-.team .member .social i {
+.instructors .member .social i {
   font-size: 18px;
   margin: 0 2px;
 }
 
-.team .member .member-info h4 {
+.instructors .member .member-info h4 {
   font-weight: 700;
   margin: 15px 0 5px 0;
   font-size: 18px;
 }
 
-.team .member .member-info span {
+.instructors .member .member-info span {
   display: block;
   font-size: 13px;
   text-transform: uppercase;
@@ -1214,23 +738,23 @@ section {
   color: #d8a200;
 }
 
-.team .member .member-info p {
+.instructors .member .member-info p {
   font-style: italic;
   font-size: 14px;
   line-height: 26px;
   color: #888888;
 }
 
-.team .member:hover .social {
+.instructors .member:hover .social {
   bottom: 0;
   opacity: 1;
   transition: bottom ease-in-out 0.4s;
 }
 
 /*--------------------------------------------------------------
-# Pricing
+# Classes
 --------------------------------------------------------------*/
-.pricing .box {
+.classes .box {
   padding: 20px;
   background: #fff;
   text-align: center;
@@ -1240,8 +764,7 @@ section {
   border: 1px solid #fff;
 }
 
-.pricing .box h3 {
-  font-weight: 400;
+.classes .box h3 {
   padding: 15px;
   margin-top: 15px;
   font-size: 18px;
@@ -1249,7 +772,7 @@ section {
   color: #151515;
 }
 
-.pricing .box h4 {
+.classes .box h4 {
   font-size: 42px;
   color: #151515;
   font-weight: 700;
@@ -1257,19 +780,19 @@ section {
   margin-bottom: 20px;
 }
 
-.pricing .box h4 sup {
+.classes .box h4 sup {
   font-size: 20px;
   top: -15px;
   left: -3px;
 }
 
-.pricing .box h4 span {
+.classes .box h4 span {
   color: #bababa;
   font-size: 16px;
   font-weight: 300;
 }
 
-.pricing .box ul {
+.classes .box ul {
   padding: 0;
   list-style: none;
   color: #151515;
@@ -1278,59 +801,58 @@ section {
   font-size: 14px;
 }
 
-.pricing .box ul li {
+.classes .box ul li {
   padding-bottom: 16px;
 }
 
-.pricing .box ul i {
+.classes .box ul i {
   color: #d8a200;
   font-size: 18px;
   padding-right: 4px;
 }
 
-.pricing .box ul .na {
+.classes .box ul .na {
   color: #ccc;
   text-decoration: line-through;
 }
 
-.pricing .box .btn-wrap {
+.classes .box .btn-wrap {
   padding: 15px;
   text-align: center;
 }
 
-.pricing .box .btn-buy {
+.classes .box .btn-buy {
   display: inline-block;
   padding: 10px 40px 12px 40px;
   border-radius: 5px;
   border: 2px solid #d8a200;
   color: #d8a200;
   font-size: 14px;
-  font-weight: 400;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   transition: 0.3s;
 }
 
-.pricing .box .btn-buy:hover {
+.classes .box .btn-buy:hover {
   background: #d8a200;
   color: #fff;
 }
 
-.pricing .recommended {
+.classes .recommended {
   border-color: #d8a200;
 }
 
-.pricing .recommended .btn-buy {
+.classes .recommended .btn-buy {
   background: #d8a200;
   color: #fff;
 }
 
-.pricing .recommended .btn-buy:hover {
+.classes .recommended .btn-buy:hover {
   background: #ffc200;
   border-color: #ffc200;
 }
 
-.pricing .recommended-badge {
+.classes .recommended-badge {
   position: absolute;
   top: 5px;
   left: 50%;
@@ -1362,7 +884,6 @@ section {
 .faq .faq-list a {
   display: block;
   position: relative;
-  font-family: #d8a200;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1470,6 +991,17 @@ section {
     transform: rotate(360deg);
   }
 }
+
+/*--------------------------------------------------------------
+# Map
+--------------------------------------------------------------*/
+#map {
+  width: 100%;
+  height: 400px;
+  background-color: grey;
+}
+
+
 
 /*--------------------------------------------------------------
 # Breadcrumbs
