Updated family concession text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -405,7 +405,7 @@
 
         </div>
         <div class="section-footnote">
-            <p class="text-muted">Concessions available for families training together: <mark>pay for three, the rest are free</mark></p>
+            <p class="text-muted">Concessions available for families training together</p>
         </div>
 
     </section><!-- End Classes Section -->
@@ -565,10 +565,7 @@
                     <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                         <p>
                             We try hard to make learning and training with Ogwr Karate Association as inexpensive as possible. Your first lesson is free, if you come back (most people do!) then you
-                            just pay on the day for each session that you attend. We currently charge £4 for a session.
-                        </p>
-                        <p>
-                            We offer concessions for families training together, we only charge for three members of a household, the rest are free.
+                            just pay on the day for each session that you attend. We currently charge £4 for a session, concessions are available for families training together.
                         </p>
                         <p>
                             After a few weeks of training, when you are sure that you are going to continue, then you will need a license and a gi. Licenses cost £21 and are renewable annually. We can
