Updated colin's profile text
Added a touch of padding to improve italic fit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -260,7 +260,11 @@
                         <div class="member-info">
                             <h4>Colin Medway</h4>
                             <span>Chief Instructor</span>
-                            <p>Colin is the founder and chief instructor of Ogwr Karate Association, he is a 6<sup>th</sup> Dan and has been training and dedicating his time to karate since 1973</p>
+                            <p>
+                                Colin is the founder and chief instructor of Ogwr Karate Association, he is a 6<sup>th</sup> Dan and since 1973 has
+                                trained with top Japanese and British instructors including his main instructor Shihan Ritchie Noblett 8<sup>th</sup>
+                                Dan, Mike O’Brien (Shotokan), Dave Mitchell, Peter Spanton, and Unel Wellington.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -273,7 +277,7 @@
                         <div class="member-info">
                             <h4>Jim Castle</h4>
                             <span>Instructor</span>
-                            <p>Jim is a 3<sup>rd</sup> Dan and has trained under some of the best karate instructors in the UK</p>
+                            <p>Jim is a 3<sup>rd</sup> Dan and has trained under some of the best karate instructors in the UK.</p>
                         </div>
                     </div>
                 </div>
@@ -286,7 +290,7 @@
                         <div class="member-info">
                             <h4>Matthew Vivian</h4>
                             <span>Instructor</span>
-                            <p>Matthew is a 2<sup>nd</sup> Dan and has been training under Sensei Colin Medway since 2009</p>
+                            <p>Matthew is a 2<sup>nd</sup> Dan and has been training under Sensei Colin Medway since 2009.</p>
                         </div>
                     </div>
                 </div>
