--- a/css/style.css
+++ b/css/style.css
@@ -750,6 +750,7 @@ section {
   font-size: 14px;
   line-height: 26px;
   color: #888888;
+  padding: 0 0.2em
 }
 
 .instructors .member:hover .social {
