Removed stock benefits image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -161,7 +161,7 @@
                             and seeing themselves, and their friends, improve and progress.</p>
                     </div>
                 </div>
-                <div class="image col-lg-6 order-1 order-lg-2 border" style='background-image: url("/images/benefits.jpg");' data-aos="fade-left" data-aos-delay="100"></div>
+                <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("/images/benefits.png");' data-aos="fade-left" data-aos-delay="100"></div>
             </div>
 
         </div>
