--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <a href="/index.html" class="hero-logo" data-aos="zoom-in"><img src="/images/logo/logo-hero.png" class="img-fluid" alt="Ogwr Karate Association logo"></a>
         <h1 data-aos="zoom-in">Welcome To Ogwr Karate Association</h1>
         <h2 data-aos="fade-up">We are a friendly group in Bridgend County training under Chief Instructor Colin Medway 6th Dan with 47 years experience</h2>
-        <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Find out more</a>
+        <a data-aos="zoom-in" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Find out more</a>
     </div>
 </section><!-- End Hero -->
 
