Added Cloudflare analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -654,7 +654,9 @@
 
 <!-- Template Main JS File -->
 <script src="/js/main.js"></script>
-
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "56b87779679c44df95a974ca2f8136d8"}'></script>
+<!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
