Price increase and time changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -380,28 +380,34 @@
 
             <div class="row justify-content-center">
 
-                <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
+                <div class="col-lg-6 col-md-6 mt-4 mt-md-0">
                     <div class="box recommended" data-aos="zoom-in">
                         <h3>Maesteg</h3>
-                        <h4><sup>£</sup>4<span> / session</span></h4>
+                        <h4><sup>£</sup>4.50<span> / session</span></h4>
                         <dl class="row">
-                            <dt class="col-5 text-end">Sunday</dt>
-                            <dd class="col-7 text-start">10:00 - 11:00 am</dd>
-                            <dt class="col-5 text-end">Tuesday</dt>
-                            <dd class="col-7 text-start">18:30 - 19:30 pm</dd>
+                            <dt class="col-4 text-end">Sunday</dt>
+                            <dd class="col-8 text-start">10:00 - 11:00 am<span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">All Grades</span></dd>
+                            <dt class="col-4 text-end">Tuesday</dt>
+                            <dd class="col-8 text-start">18:30 - 19:30 pm<span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">All Grades</span></dd>
                         </dl>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
+                <div class="col-lg-6 col-md-6 mt-4 mt-md-0">
                     <div class="box recommended" data-aos="zoom-in">
                         <h3>Aberkenfig</h3>
-                        <h4><sup>£</sup>4<span> / session</span></h4>
+                        <h4><sup>£</sup>4.50<span> / session</span></h4>
                         <dl class="row">
-                            <dt class="col-5 text-end">Monday</dt>
-                            <dd class="col-7 text-start">18:30 - 19:30 pm</dd>
-                            <dt class="col-5 text-end">Wednesday</dt>
-                            <dd class="col-7 text-start">18:30 - 19:30 pm</dd>
+                            <dt class="col-4 text-end">Monday</dt>
+                            <dd class="col-8 text-start">
+                                18:00 - 19:00 pm <span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">Beginners</span><br />
+                                19:00 - 20:00 pm <span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">Graded</span>
+                            </dd>
+                            <dt class="col-4 text-end">Wednesday</dt>
+                            <dd class="col-8 text-start">
+                                18:00 - 19:00 pm <span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">Beginners</span><br />
+                                19:00 - 20:00 pm <span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">Graded</span>
+                            </dd>
                         </dl>
                     </div>
                 </div>
@@ -569,14 +575,14 @@
                     <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                         <p>
                             We try hard to make learning and training with Ogwr Karate Association as inexpensive as possible. Your first lesson is free, if you come back (most people do!) then you
-                            just pay on the day for each session that you attend. We currently charge £4 for a session, concessions are available for families training together.
+                            just pay on the day for each session that you attend. We currently charge £4.50 for a session, concessions are available for families training together.
                         </p>
                         <p>
-                            After a few weeks of training, when you are sure that you are going to continue, then you will need a license and a gi. Licenses cost £21 and are renewable annually. We can
+                            After a few weeks of training, when you are sure that you are going to continue, then you will need a license and a gi. Licenses cost £23 and are renewable annually. We can
                             supply you with a gi, the cost varies depending on size but is usually around £20.
                         </p>
                         <p>
-                            Broken down the costs are: £4 each session, £21 license paid annually, a one-off payment for a gi of around £20.
+                            Broken down the costs are: £4.50 each session, £23 license paid annually, a one-off payment for a gi of around £20.
                         </p>
                     </div>
                 </li>
