Updated class times

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -380,34 +380,28 @@
 
             <div class="row justify-content-center">
 
-                <div class="col-lg-6 col-md-6 mt-4 mt-md-0">
+                <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
                     <div class="box recommended" data-aos="zoom-in">
                         <h3>Maesteg</h3>
                         <h4><sup>£</sup>4.50<span> / session</span></h4>
                         <dl class="row">
-                            <dt class="col-4 text-end">Sunday</dt>
-                            <dd class="col-8 text-start">10:00 - 11:00 am<span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">All Grades</span></dd>
-                            <dt class="col-4 text-end">Tuesday</dt>
-                            <dd class="col-8 text-start">18:30 - 19:30 pm<span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">All Grades</span></dd>
+                            <dt class="col-5 text-end">Sunday</dt>
+                            <dd class="col-7 text-start">10:00 - 11:00 am</dd>
+                            <dt class="col-5 text-end">Tuesday</dt>
+                            <dd class="col-7 text-start">18:30 - 19:30 pm</dd>
                         </dl>
                     </div>
                 </div>
 
-                <div class="col-lg-6 col-md-6 mt-4 mt-md-0">
+                <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
                     <div class="box recommended" data-aos="zoom-in">
                         <h3>Aberkenfig</h3>
                         <h4><sup>£</sup>4.50<span> / session</span></h4>
                         <dl class="row">
-                            <dt class="col-4 text-end">Monday</dt>
-                            <dd class="col-8 text-start">
-                                18:00 - 19:00 pm <span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">Beginners</span><br />
-                                19:00 - 20:00 pm <span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">Graded</span>
-                            </dd>
-                            <dt class="col-4 text-end">Wednesday</dt>
-                            <dd class="col-8 text-start">
-                                18:00 - 19:00 pm <span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">Beginners</span><br />
-                                19:00 - 20:00 pm <span class="badge badge-pill" style="color: #d8a200; font-size: xx-small">Graded</span>
-                            </dd>
+                            <dt class="col-5 text-end">Monday</dt>
+                            <dd class="col-7 text-start">18:30 - 19:30 pm</dd>
+                            <dt class="col-5 text-end">Wednesday</dt>
+                            <dd class="col-7 text-start">18:30 - 19:30 pm</dd>
                         </dl>
                     </div>
                 </div>
