--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -270,19 +270,6 @@
                 </div>
 
                 <div class="col-lg-4 col-md-7 d-flex align-items-stretch">
-                    <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                        <div class="member-img">
-                            <img src="/images/instructors/jim.png" class="img-fluid mx-auto d-block" alt="Jim Castle">
-                        </div>
-                        <div class="member-info">
-                            <h4>Jim Castle</h4>
-                            <span>Instructor</span>
-                            <p>Jim is a 3<sup>rd</sup> Dan and has trained under some of the best karate instructors in the UK.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-7 d-flex align-items-stretch">
                     <div class="member" data-aos="zoom-in" data-aos-delay="200">
                         <div class="member-img">
                             <img src="/images/instructors/matthew.png" class="img-fluid mx-auto d-block" alt="Matthew Vivian">
@@ -291,6 +278,19 @@
                             <h4>Matthew Vivian</h4>
                             <span>Instructor</span>
                             <p>Matthew is a 2<sup>nd</sup> Dan and has been training under Sensei Colin Medway since 2009.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-7 d-flex align-items-stretch">
+                    <div class="member" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="member-img">
+                            <img src="/images/instructors/jamie.png" class="img-fluid mx-auto d-block" alt="Jim Castle">
+                        </div>
+                        <div class="member-info">
+                            <h4>Jamie Morgan-Sparkes</h4>
+                            <span>Instructor</span>
+                            <p>Jamie has been with Ogwr Karate Association for over 14 years and is a 1<sup>st</sup> Dan.</p>
                         </div>
                     </div>
                 </div>
