--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -277,7 +277,7 @@
                         <div class="member-info">
                             <h4>Matthew Vivian</h4>
                             <span>Instructor</span>
-                            <p>Matthew is a 2<sup>nd</sup> Dan and has been training under Sensei Colin Medway since 2009.</p>
+                            <p>Matthew is a 3<sup>rd</sup> Dan and has been training under Sensei Colin Medway since 2009.</p>
                         </div>
                     </div>
                 </div>
