--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Ogwr Karate Association</title>
-    <meta content="A friendly karate group in Bridgend County, training under Chief Instructor Colin Medway 6th Dan with 47 years experience" name="description">
+    <meta content="A friendly karate group in Bridgend County, training under Chief Instructor Colin Medway 7th Dan with over 50 years experience" name="description">
     <meta content="karate, martial arts, Bridgend, Maesteg, Aberkenfig, Bryncethin, Sarn, Tondu" name="keywords">
 
     <!-- Favicons -->
@@ -43,7 +43,7 @@
     <div class="hero-container">
         <a href="/index.html" class="hero-logo" data-aos="zoom-in"><img src="/images/logo/logo-hero.png" class="img-fluid" alt="Ogwr Karate Association logo"></a>
         <h1 data-aos="zoom-in">Welcome To Ogwr Karate Association</h1>
-        <h2 data-aos="fade-up">We are a friendly group in Bridgend County training under Chief Instructor Colin Medway 6th Dan with 47 years experience</h2>
+        <h2 data-aos="fade-up">We are a friendly group in Bridgend County training under Chief Instructor Colin Medway 7th Dan with over 50 years experience</h2>
         <a data-aos="zoom-in" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Find out more</a>
     </div>
 </section><!-- End Hero -->
@@ -261,7 +261,7 @@
                             <h4>Colin Medway</h4>
                             <span>Chief Instructor</span>
                             <p>
-                                Colin is the founder and chief instructor of Ogwr Karate Association, he is a 6<sup>th</sup> Dan and since 1973 has
+                                Colin is the founder and chief instructor of Ogwr Karate Association, he is a 7<sup>th</sup> Dan and since 1973 has
                                 trained with top Japanese and British instructors including his main instructor Shihan Ritchie Noblett 8<sup>th</sup>
                                 Dan, Mike O’Brien (Shotokan), Dave Mitchell, Peter Spanton, and Unel Wellington.
                             </p>
@@ -383,12 +383,12 @@
                 <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
                     <div class="box recommended" data-aos="zoom-in">
                         <h3>Maesteg</h3>
-                        <h4><sup>£</sup>4.50<span> / session</span></h4>
+                        <h4><sup>£</sup>5<span> / session</span></h4>
                         <dl class="row">
                             <dt class="col-5 text-end">Sunday</dt>
                             <dd class="col-7 text-start">10:00 - 11:00 am</dd>
-                            <dt class="col-5 text-end">Tuesday</dt>
-                            <dd class="col-7 text-start">18:30 - 19:30 pm</dd>
+                            <dt class="col-5 text-end">&nbsp;</dt>
+                            <dd class="col-7 text-start">&nbsp;</dd>
                         </dl>
                     </div>
                 </div>
